# tesaurus-python

./: .coveragerc  .flake8  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: lint.yml  publish.yml  test.yml
tesaurus/: __init__.py  perintah.py  tesaurus.py
tests/: _mock.py  server.py  test_kasus.py  test_lain.py  test_tesaurus.py
tests/html/: katatidakvalid.html  main.html  makan.html
tests/html/katatidakvalid/: konjungsi.html
tests/html/makan/: adjektiva.html
tests/kasus/: makan.txt  makan_adjektiva.txt  makan_terkait.txt
tests/serialisasi/: makan.json
