[metadata]
name = tesaurus
version = 0.1.0
description = Sebuah modul Python untuk mengambil informasi Tesaurus dari Tesaurus Tematis Kemendikbud
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/noaione/tesaurus-python
author = noaione
author_email = noaione0809@gmail.com
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: Indonesian
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Linguistic
keywords = tesaurus lema bahasa indonesia scraper async

[options]
packages = find:
package_dir = =tesaurus
install_requires =
    beautifulsoup4
    aiohttp
python_requires = >=3.6

[options.packages.find]
where = tesaurus

[flake8]
ignore = E203,W503,W0621,W0703,W1203,E731
max_line_length = 110

[isort]
known_third_party = bs4,requests
known_first_party = tesaurus
